err/tx-highered.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/armstrong'...
Listing './lib/python3.5/site-packages/armstrong/utils'...
Listing './lib/python3.5/site-packages/armstrong/utils/backends'...
Listing './lib/python3.5/site-packages/armstrong.utils.backends-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tx_highered'...
Listing './lib/python3.5/site-packages/tx_highered/fixtures'...
Listing './lib/python3.5/site-packages/tx_highered/instachart'...
Listing './lib/python3.5/site-packages/tx_highered/instachart/templates'...
Listing './lib/python3.5/site-packages/tx_highered/instachart/templates/instachart'...
Listing './lib/python3.5/site-packages/tx_highered/instachart/templates/instachart/simplechart'...
Listing './lib/python3.5/site-packages/tx_highered/instachart/templatetags'...
Listing './lib/python3.5/site-packages/tx_highered/management'...
Listing './lib/python3.5/site-packages/tx_highered/management/commands'...
Compiling './lib/python3.5/site-packages/tx_highered/management/commands/tx_highered_process.py'...
***   File "./lib/python3.5/site-packages/tx_highered/management/commands/tx_highered_process.py", line 17
    print x, '% admitted', x.percent_of_applicants_admitted
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tx_highered/management/commands/tx_highered_reportcard.py'...
***   File "./lib/python3.5/site-packages/tx_highered/management/commands/tx_highered_reportcard.py", line 54
    print ','.join(header)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tx_highered/migrations'...
Listing './lib/python3.5/site-packages/tx_highered/models'...
Listing './lib/python3.5/site-packages/tx_highered/scripts'...
Compiling './lib/python3.5/site-packages/tx_highered/scripts/init_institutions.py'...
***   File "./lib/python3.5/site-packages/tx_highered/scripts/init_institutions.py", line 57
    print i, c
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tx_highered/scripts/init_ipeds_ids.py'...
***   File "./lib/python3.5/site-packages/tx_highered/scripts/init_ipeds_ids.py", line 29
    print inst
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tx_highered/scripts/init_wikipedia.py'...
***   File "./lib/python3.5/site-packages/tx_highered/scripts/init_wikipedia.py", line 103
    print inst.name + " -> " + title
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tx_highered/static'...
Listing './lib/python3.5/site-packages/tx_highered/static/d3'...
Listing './lib/python3.5/site-packages/tx_highered/static/d3/js'...
Listing './lib/python3.5/site-packages/tx_highered/static/js'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/css'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/images'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/js'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/bootstrap'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/bootstrap/.sass-cache'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/bootstrap/.sass-cache/2f1d8f34861df39f5f386052f03c17d9c3ceca65'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/bootstrap/css'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/bootstrap/img'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/d3chart'...
Listing './lib/python3.5/site-packages/tx_highered/static/tx_highered/vendor/handlebars.js'...
Listing './lib/python3.5/site-packages/tx_highered/templates'...
Listing './lib/python3.5/site-packages/tx_highered/templates/instachart'...
Listing './lib/python3.5/site-packages/tx_highered/templates/instachart/simplechart'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout/tx_highered'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout/tx_highered/contactfieldsmixin'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout/tx_highered/institution'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout/tx_highered/system'...
Listing './lib/python3.5/site-packages/tx_highered/templates/layout/tx_highered/testscores'...
Listing './lib/python3.5/site-packages/tx_highered/templates/tx_highered'...
Listing './lib/python3.5/site-packages/tx_highered/templates/tx_highered/includes'...
Listing './lib/python3.5/site-packages/tx_highered/templates/tx_highered/reports'...
Listing './lib/python3.5/site-packages/tx_highered/templates/tx_highered/sentences'...
Listing './lib/python3.5/site-packages/tx_highered/templates/tx_highered/sentences/institution'...
Listing './lib/python3.5/site-packages/tx_highered/templatetags'...
Compiling './lib/python3.5/site-packages/tx_highered/templatetags/cheat.py'...
***   File "./lib/python3.5/site-packages/tx_highered/templatetags/cheat.py", line 9
    print key
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tx_highered/thecb_importer'...
Compiling './lib/python3.5/site-packages/tx_highered/thecb_importer/load_admissions.py'...
***   File "./lib/python3.5/site-packages/tx_highered/thecb_importer/load_admissions.py", line 166
    print 'created %s %d admissions...' % (
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tx_highered/thecb_importer/load_almanac_graduation_rates.py'...
***   File "./lib/python3.5/site-packages/tx_highered/thecb_importer/load_almanac_graduation_rates.py", line 103
    print "created %s graduation rates..." % institution.name
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tx_highered-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/tx_lege_districts'...
Listing './lib/python3.5/site-packages/tx_lege_districts-0.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
